Changed a bit the managers