@@ -9,47 +9,59 @@ import java.util.stream.Collectors;
 public class GithubManager {
 
     private final GitHub github;
-    private final FollowerManager fm = new FollowerManager();
+    private final GHUser currentUser;
+    private final FollowerManager followerManager = new FollowerManager();
 
 
-    public GithubManager(String ACCESS_TOKEN) throws IOException {
+    public GithubManager(String ACCESS_TOKEN, String username) throws IOException {
         this.github = new GitHubBuilder().withOAuthToken(ACCESS_TOKEN).build();
+        this.currentUser = github.getUser(username);
     }
 
-    public UserDTO convertToUserData(GHUser ghUser) {
-        return new UserDTO(ghUser.getId(), ghUser.getLogin(), ghUser.getAvatarUrl(), ghUser.getHtmlUrl().toString());
+    public List<FollowerDTO> getNewFollowers() throws IOException {
+        List<Long> followersInDb = followerManager
+            .getAllUsers()
+            .stream()
+            .map(FollowerDTO::getGithubId)
+            .toList();
+
+        List<FollowerDTO> currentFollowers = currentUser
+            .getFollowers()
+            .stream()
+            .map(FollowerDTO::fromGHUser)
+            .toList();
+
+        return currentFollowers
+            .stream()
+            .filter(follower -> !followersInDb.contains(follower.getGithubId()))
+            .peek(followerManager::insertFollowerData)
+            .collect(Collectors.toList());
     }
 
-
-    public List<UserDTO> getNewFollowers(String username) throws IOException {
-        GHUser user = github.getUser(username);
-
-        List<Long> followersInDb = fm.getAllUsers().stream().map(UserDTO::getGithubId).toList();
-
-        List<UserDTO> currentFollowers = user.getFollowers().stream().map(this::convertToUserData).toList();
-
-        return currentFollowers.stream()
-                .filter(follower -> !followersInDb.contains(follower.getGithubId()))
-                .peek(fm::insertUserData)
-                .collect(Collectors.toList());
+    public List<FollowerDTO> getFollowers() throws IOException {
+        return currentUser
+            .getFollowers()
+            .stream()
+            .map(FollowerDTO::fromGHUser)
+            .toList();
     }
 
-    public List<UserDTO> getFollowers(String username) throws IOException {
-        GHUser user = github.getUser(username);
+    public List<FollowerDTO> getUnfollowers() throws IOException {
+        List<FollowerDTO> followersInDb = followerManager.getAllUsers();
 
-        return user.getFollowers().stream().map(this::convertToUserData).toList();
-    }
+        List<Long> currentFollowers = currentUser
+            .getFollowers()
+            .stream()
+            .map(FollowerDTO::fromGHUser)
+            .map(FollowerDTO::getGithubId)
+            .toList();
 
-    public List<UserDTO> getUnfollowers(String username) throws IOException {
-        GHUser user = github.getUser(username);
-
-        List<UserDTO> followersInDb = fm.getAllUsers().stream().toList();
-
-        List<Long> currentFollowers = user.getFollowers().stream().map(this::convertToUserData).map(UserDTO::getGithubId).toList();
-
-        return followersInDb.stream()
-                .filter(follower -> !currentFollowers.contains(follower.getGithubId()))
-                .peek(fm::deleteUserData)
-                .collect(Collectors.toList());
+        return followersInDb
+            .stream()
+            .filter(
+                follower -> !currentFollowers.contains(follower.getGithubId())
+            )
+            .peek(followerManager::deleteFollowerData)
+            .collect(Collectors.toList());
     }
 }
